--- a/CS446Project/app/src/main/res/values/strings.xml
+++ b/CS446Project/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="create_session">Create Session</string>
     <string name="join_session">Join Session</string>
     <string name="manage_playlist">Manage Playlist</string>
-    <string name="mute">Mute</string>
     <string name="end_session">End Session</string>
     <string name="leave_session">Leave Session</string>
     <!--Host's session playlist GUI (screen 6 of mockup) shows this string after all participants
@@ -43,4 +42,11 @@ HostMusicPlayerActivity or ParticipantMusicPlayerActivity-->
     <!--String for the broadcasted Intent ParticipantMusicPlayerActivity receives to indicate that
     the 1st song in the session playlist has finished downloading onto the participant's device-->
     <string name="song_finished_downloading">song_finished_downloading</string>
+    <string name="start_session">Start Session</string>
+    <string name="enter_session_name">Enter Session Name</string>
+    <string name="select_playlist_to_upload_to_session">Select Playlist to Upload to Session:</string>
+    <string name="select_songs_to_upload_to_playlist">Select Songs to Upload to Playlist:</string>
+    <string name="new_playlist">New Playlist</string>
+    <string name="create_playlist">Create Playlist</string>
+    <string name="enter_playlist_name">Enter Playlist Name</string>
 </resources>
