--- a/CS446Project/app/src/main/res/values/strings.xml
+++ b/CS446Project/app/src/main/res/values/strings.xml
@@ -22,37 +22,37 @@
     <string name="wait_message">Please wait for new participants to download files.</string>
     <!--Name of any parcelable extra that is a Playlist object-->
     <string name="session_playlist">playlist</string>
-    <!--String for the broadcasted IntHostMusicPlayerActivityvity receives to indicate that a new
+    <!--String for the broadcasted Intent HostMusicPlayerActivity receives to indicate that a new
     participant has joined the session-->
     <string name="participant_joined">&domain_name;new_participant_joined</string>
-    <!--String for the broadcasted IntMusicPlayerActivityvity receives to indicate that all
+    <!--String for the broadcasted Intent HostMusicPlayerActivity receives to indicate that all
     participants have finished downloading at least the 1st song in the session playlist-->
     <string name="all_participants_ready">&domain_name;all_participants_ready</string>
-    <!--String for the IntMusicPlayerActivityvity broadcasts to tell other components that the
+    <!--String for the Intent HostMusicPlayerService broadcasts to tell other components that the
     session playlist is currently stopped (i.e. the session playlist is not playing nor paused)-->
     <string name="playlist_stopped">&domain_name;playlist_stopped</string>
-    <!--String for the IntMusicPlayerActivityvity broadcasts to tell other components that the
+    <!--String for the Intent HostMusicPlayerService broadcasts to tell other components that the
     session playlist is currently not stopped (i.e. the session playlist is playing or paused)-->
     <string name="playlist_not_stopped">&domain_name;playlist_not_stopped</string>
-    <!--String for the IntMusicPlayerActivityvity broadcasts to tell other components that the
+    <!--String for the Intent HostMusicPlayerActivity broadcasts to tell other components that the
     host has pressed Play on the session playlist-->
     <string name="send_play">&domain_name;send_play</string>
-    <!--String for the IntMusicPlayerActivityvity broadcasts to tell other components that the
+    <!--String for the Intent HostMusicPlayerActivity broadcasts to tell other components that the
     host has paused the session playlist-->
     <string name="send_pause">&domain_name;send_pause</string>
-    <!--String for the IntMusicPlayerActivityvity broadcasts to tell other components that the
+    <!--String for the Intent HostMusicPlayerActivity broadcasts to tell other components that the
     host has stopped the session playlist-->
     <string name="send_stop">&domain_name;send_stop</string>
-    <!--String for the broadcasted Intent ParticipantMusicPlayerActivity receives to indicate that
-    it should play the session playlist-->
+    <!--String for the broadcasted Intent to indicate to the receiving component that it should play
+    the session playlist-->
     <string name="receive_play">&domain_name;receive_play</string>
-    <!--String for the broadcasted Intent ParticipantMusicPlayerActivity receives to indicate that
-    it should pause the session playlist-->
+    <!--String for the broadcasted Intent to indicate to the receiving component that it should
+    pause the session playlist-->
     <string name="receive_pause">&domain_name;receive_pause</string>
-    <!--String for the broadcasted Intent ParticipantMusicPlayerActivity receives to indicate that
-    it should stop the session playlist-->
+    <!--String for the broadcasted Intent to indicate to the receiving component that it should stop
+    the session playlist-->
     <string name="receive_stop">&domain_name;receive_stop</string>
-    <!--String for the broadcasted Intent ParticipantMusicPlayerActivity receives to indicate that
+    <!--String for the broadcasted Intent ParticipantMusicPlayerService receives to indicate that
     the 1st song in the session playlist has finished downloading onto the participant's device-->
     <string name="song_finished_downloading">&domain_name;song_finished_downloading</string>
     <!--Name of the Intent ParticipantMusicPlayerActivity broadcasts to tell other components
@@ -82,7 +82,7 @@
     <!--The GUI that lists all sessions a user can join (screen 2 of mockup) shows this string
     before ChooseSessionActivity receives the list of session names.-->
     <string name="waiting_for_session_names">Retrieving sessions...</string>
-    <!--Name of the IntMusicPlayerActivityvity broadcasts to tell other components that a user
+    <!--Name of the Intent HostMusicPlayerService broadcasts to tell other components that a user
     has finished creating a session-->
     <string name="session_created">&domain_name;session_created</string>
     <!--Name of the Intent ChooseSessionActivity broadcasts to tell other components that a user is
@@ -92,10 +92,10 @@
     ParticipantMusicPlayerActivity. This extra is a String that is the name of the session the
     user has chosen to join.-->
     <string name="session_name">session_name</string>
-    <!--Name of the broadcasted IntHostMusicPlayerActivityvity receives that indicates the
+    <!--Name of the broadcasted Intent HostMusicPlayerService receives that indicates the
     connection manager is requesting the session playlist.-->
     <string name="request_session_playlist">&domain_name;request_session_playlist</string>
-    <!--Name of the IntHostMusicPlayerActivityvity broadcasts that contains the session playlist-->
+    <!--Name of the Intent HostMusicPlayerService broadcasts that contains the session playlist-->
     <string name="return_session_playlist">&domain_name;return_session_playlist</string>
     <!--Name of the Intent ChooseSessionActivity broadcasts to tell other components that it is
     requesting a list of available sessions the user can join-->
