Made a service bound to MainActivity; replaced method calls with broadcast intents.

--- a/CS446Project/app/src/main/res/values/strings.xml
+++ b/CS446Project/app/src/main/res/values/strings.xml
@@ -28,11 +28,11 @@
     <!--String for the broadcasted Intent HostMusicPlayerActivity receives to indicate that all
     participants have finished downloading at least the 1st song in the session playlist-->
     <string name="all_participants_ready">&domain_name;all_participants_ready</string>
-    <!--String for the Intent HostMusicPlayerService broadcasts to tell other components that the
-    session playlist is currently stopped (i.e. the session playlist is not playing nor paused)-->
+    <!--String for the broadcast Intent that indicates that the session playlist has transitioned
+    from a playing state or paused state to a stopped state-->
     <string name="playlist_stopped">&domain_name;playlist_stopped</string>
-    <!--String for the Intent HostMusicPlayerService broadcasts to tell other components that the
-    session playlist is currently not stopped (i.e. the session playlist is playing or paused)-->
+    <!--String for the broadcast Intent that indicates that the session playlist has transitioned
+    from a stopped state to a playing state-->
     <string name="playlist_not_stopped">&domain_name;playlist_not_stopped</string>
     <!--String for the Intent HostMusicPlayerActivity broadcasts to tell other components that the
     host has pressed Play on the session playlist-->
@@ -52,7 +52,7 @@
     <!--String for the broadcasted Intent to indicate to the receiving component that it should stop
     the session playlist-->
     <string name="receive_stop">&domain_name;receive_stop</string>
-    <!--String for the broadcasted Intent ParticipantMusicPlayerService receives to indicate that
+    <!--String for the broadcasted Intent ParticipantMusicPlayer receives to indicate that
     the 1st song in the session playlist has finished downloading onto the participant's device-->
     <string name="song_finished_downloading">&domain_name;song_finished_downloading</string>
     <!--Name of the Intent ParticipantMusicPlayerActivity broadcasts to tell other components
@@ -82,7 +82,7 @@
     <!--The GUI that lists all sessions a user can join (screen 2 of mockup) shows this string
     before ChooseSessionActivity receives the list of session names.-->
     <string name="waiting_for_session_names">Retrieving sessions...</string>
-    <!--Name of the Intent HostMusicPlayerService broadcasts to tell other components that a user
+    <!--Name of the Intent HostMusicPlayer broadcasts to tell other components that a user
     has finished creating a session-->
     <string name="session_created">&domain_name;session_created</string>
     <!--Name of the Intent ChooseSessionActivity broadcasts to tell other components that a user is
@@ -92,10 +92,10 @@
     ParticipantMusicPlayerActivity. This extra is a String that is the name of the session the
     user has chosen to join.-->
     <string name="session_name">session_name</string>
-    <!--Name of the broadcasted Intent HostMusicPlayerService receives that indicates the
+    <!--Name of the broadcasted Intent HostMusicPlayer receives that indicates the
     connection manager is requesting the session playlist.-->
     <string name="request_session_playlist">&domain_name;request_session_playlist</string>
-    <!--Name of the Intent HostMusicPlayerService broadcasts that contains the session playlist-->
+    <!--Name of the Intent HostMusicPlayer broadcasts that contains the session playlist-->
     <string name="return_session_playlist">&domain_name;return_session_playlist</string>
     <!--Name of the Intent ChooseSessionActivity broadcasts to tell other components that it is
     requesting a list of available sessions the user can join-->
@@ -111,10 +111,63 @@
     ParticipantMusicPlayerActivity. This extra is a String that is the name of the session the
     user created.-->
     <string name="created_session_name">created_session_name</string>
-    <!--Name of the Intent HostMusicPlayerService broadcasts to indicate that a song in the session
+    <!--Name of the Intent HostMusicPlayer broadcasts to indicate that a song in the session
     playlist has finished-->
-    <string name="song_completed">song_completed</string>
+    <string name="song_completed">&domain_name;song_completed</string>
     <!--Name of the extra that the song_completed Intent contains that is the index of the song that
     should play next in the session playlist, with the index of the first song being 0-->
     <string name="current_song_index">current_song_index</string>
+    <!--Name of the Intent HostMusicPlayerActivity broadcasts to indicate that it has been started
+     -->
+    <string name="host_music_player_activity_started">&domain_name;host_music_player_activity_started</string>
+    <!--Name of the Intent ParticipantMusicPlayerActivity broadcasts to indicate that it has been
+    started and has the session playlist-->
+    <string name="participant_music_player_activity_started">&domain_name;participant_music_player_activity_started</string>
+    <!--Name of the Intent SynchronicityMusicPlayerActivity broadcasts to indicate that the playlist
+    is to be played. If the user is the host, this Intent is broadcast when the user presses the
+    play button. If the user is a participant, this Intent is broadcast when the user's phone
+    receives a play signal.-->
+    <string name="play">&domain_name;play</string>
+    <!--Name of the Intent HostMusicPlayer broadcasts to indicate that the host's GUI must update to
+    reflect the fact that the playlist is playing-->
+    <string name="playing_update_GUI">&domain_name;playing_update_GUI</string>
+    <!--Name of the Intent SynchronicityMusicPlayerActivity broadcasts to indicate that the playlist
+    is to be paused. If the user is the host, this Intent is broadcast when the user presses the
+    pause button. If the user is a participant, this Intent is broadcast when the user's phone
+    receives a pause signal.-->
+    <string name="pause">&domain_name;pause</string>
+    <!--Name of the Intent HostMusicPlayer broadcasts to indicate that the host's GUI must update to
+    reflect the fact that the playlist is paused-->
+    <string name="paused_update_GUI">&domain_name;paused_update_GUI</string>
+    <!--Name of the Intent SynchronicityMusicPlayerActivity broadcasts to indicate that the playlist
+    is to be stopped. If the user is the host, this Intent is broadcast when the user presses the
+    stop button. If the user is a participant, this Intent is broadcast when the user's phone
+    receives a stop signal.-->
+    <string name="stop">&domain_name;stop</string>
+    <!--Name of the Intent HostMusicPlayer broadcasts to indicate that the host's GUI must update to
+    reflect the fact that the playlist is stopped-->
+    <string name="stopped_update_GUI">&domain_name;stopped_update_GUI</string>
+    <!--Name of the Intent SynchronicityMusicPlayerActivity broadcasts to indicate that the playlist
+    is to be muted on the user's phone.-->
+    <string name="mute">&domain_name;mute</string>
+    <!--Name of the Intent SynchronicityMusicPlayer broadcasts to indicate that the GUI must update
+    to reflect the fact that the user has muted the playlist-->
+    <string name="muted_update_GUI">&domain_name;muted_update_GUI</string>
+    <!--Name of the Intent SynchronicityMusicPlayerActivity broadcasts to indicate that the playlist
+    is to be unmuted on the user's phone.-->
+    <string name="unmute">&domain_name;unmute</string>
+    <!--Name of the Intent SynchronicityMusicPlayer broadcasts to indicate that the GUI must update
+    to reflect the fact that the user has unmuted the playlist-->
+    <string name="unmuted_update_GUI">&domain_name;unmuted_update_GUI</string>
+    <!--Name of the Intent SynchronicityMusicPlayer broadcasts to indicate that the progress bar,
+    elapsed time, and remaining time shown in the GUI for the currently playing song must be
+    updated-->
+    <string name="update_song_progress">&domain_name;update_song_progress</string>
+    <!--Name of the extra that the update_song_progress Intent contains that is the index of the
+    currently playing song in the session playlist, with the index of the first song being 0-->
+    <string name="currently_playing_song_index">currently_playing_song_index</string>
+    <!--Name of the extra that the update_song_progress Intent contains that is the position of the
+    currently playing song in the session playlist (i.e. the amount of time, in milliseconds, that
+    the song has played for-->
+    <string name="current_position">current_position</string>
 </resources>
